# GMiner

./: CMakeLists.txt  gminer-conf.ini  ibs.cfg  machines.cfg
core/: master.hpp  master.tpp  slave.hpp  slave.tpp  worker.hpp  worker.tpp
util/: CMakeLists.txt  communication.hpp  communication.tpp  global.cpp  global.hpp  rdma.cpp  rdma.hpp  rdma.tpp  serialization.hpp  serialization.tpp
util/rdmalib/: CMakeLists.txt  rdmaio.hpp
